@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//field[@name='journal']" position="after">
+        <newline/>
+        <label name="product"/>
+        <field name="product"/>
+        <label name="product_category"/>
+        <field name="product_category"/>
+    </xpath>
+</data>
